--- a/new.ipynb
+++ b/new.ipynb
@@ -18243,6 +18243,15 @@
     "ani = animation.FuncAnimation(fig=fig, func=update, frames=1000, interval=100, blit=False)\n",
     "HTML(ani.to_html5_video())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# References\n",
+    "\n",
+    "[1] https://www.mathematik.uni-ulm.de/stochastik/lehre/ss06/markov/skript_engl/node34.html"
+   ]
   }
  ],
  "metadata": {
